# mypyllant-component

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  LICENSE  README.md  dev-requirements.txt  docker-compose.yml  docker-test.sh  hacs.json  index.html  objects.inv  pyproject.toml  requirements.test.txt  run_pytest.sh  run_venv.sh  setup.cfg  sitemap.xml
.claude/: settings.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-test.yaml  gh-pages.yaml  hassfest.yaml  release.yaml
1-automations/: index.html
2-entities/: index.html
2-services/: index.html
3-contributing/: index.html
3-library/: index.html
3-reverse-engineering/: index.html
config/: configuration.yaml
custom_components/mypyllant/: __init__.py  binary_sensor.py  calendar.py  climate.py  config_flow.py  const.py  coordinator.py  datetime.py  decorators.py  fan.py  manifest.json  number.py  scf.py  scf_entity.py  scf_write.py  select.py  sensor.py  services.yaml  strings.json  switch.py  utils.py  ventilation_climate.py  water_heater.py
custom_components/mypyllant/entities/: base.py  calendar.py  circuit.py  device.py  dhw.py  system.py  system_holiday.py  ventilation.py  zone.py
custom_components/mypyllant/translations/: cs.json  de.json  en.json  fr.json  it.json  nl.json  pl.json  sk.json
docker/: .env.sample  entrypoint.sh
docs/: Dockerfile  mkdocs.yml
docs/docs/: 1-automations.md  2-entities.md  2-library.md  2-services.md  3-contributing.md  3-library.md  3-reverse-engineering.md  4-python-library.md  index.md
scripts/: lint  release  setup  update-mypyllant
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py  export-entities.sh  generate_services_docs.py  print_brands.py  scf_state_sample.json  test_binary_sensor.py  test_calendar.py  test_climate.py  test_fan.py  test_init.py  test_mypyllant_version.py  test_no_system.py  test_number.py  test_quota.py  test_scf.py  test_sensor.py  test_services.py  test_utils.py  test_water_heater.py  utils.py
tests/data/: hourly_data_coordinator_gas.py
