[project]
name = "mypyllant-component"
version = "0.9.2"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "myPyllant==0.9.3",
    "requests>=2.32.5",
]

[tool.coverage.run]
source = ["custom_components"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplemented()",
    "if __name__ == '__main__':",
    "main()",
]
show_missing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git"]
addopts = """
-n4
--strict-markers
--cov=custom_components"""
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:Inheritance class CountingClientSession from ClientSession is discouraged:DeprecationWarning",
]

[tool.mypy]
python_version = "3.13"
pretty = true
follow_imports = "silent"
ignore_missing_imports = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.ruff.lint.pycodestyle]
max-line-length = 80
